# pngjs

./: .gitignore  .prettierignore  README.md  eslint.config.js  package-lock.json  package.json
.github/workflows/: ci.yml
benchmark/: README.md  bench.mjs  package-lock.json  package.json
examples/: 16bit_write.js  fromdocs.js  newfile.js  set-colortype.js  simple.js  sync.js
lib/: bitmapper.js  bitpacker.js  chunkstream.js  constants.js  filter-pack.js  filter-parse-async.js  filter-parse-sync.js  filter-parse.js  format-normaliser.js  inflate-size.js  interlace.js  packer-async.js  packer-sync.js  packer.js  paeth-predictor.js  parser-async.js  parser-sync.js  parser.js  png-sync.js  png.js  sync-reader.js  write-options.js
native/: Cargo.toml  README.md  copy-artifact.mjs  png.js  pngjs-native-darwin-arm64.node  pngjs-native-linux-x64-gnu.node
native/src/: lib.rs
test/: bg-spec.js  convert-images-spec.js  internal-spec.js  png-extra-spec.js  png-parse-spec.js  wasm-bg-spec.js  wasm-convert-images-spec.js  wasm-png-extra-spec.js  wasm-png-parse-spec.js  wasm-spec.js
wasm/: Cargo.toml  README.md  png.js  png.wasm
wasm/src/: lib.rs
